# MC970-Threads-Exercises

./: .gitignore  .gitlint  MACHINE.md  README.md
01-hello-threads/: CMakeLists.txt  README.md  SOLUTION.md
01-hello-threads/src/: hello_threads.c  hello_threads_solution.c
02-fractal-generation/: .gitignore  CMakeLists.txt  README.md  SOLUTION.md
02-fractal-generation/bench/: analysis.ipynb  results.csv  timing.py
02-fractal-generation/src/: CycleTimer.h  main.cpp  mandelbrotSerial.cpp  mandelbrotThread.cpp  ppm.cpp
03-monte-carlo-pi/: CMakeLists.txt  README.md  SOLUTION.md
03-monte-carlo-pi/bench/: closeness.py  results.csv  timing.py
03-monte-carlo-pi/src/: monte_carlo_optimized.cpp  monte_carlo_parallel.cpp  monte_carlo_serial.cpp
04-false-sharing/: CMakeLists.txt  README.md  SOLUTION.md
04-false-sharing/bench/: perf.sh
04-false-sharing/bench/local/: c2c.data  c2c.stdout  c2c.txt  dry.stdout  mem.data  mem.stdout  mem.txt  stat.data  stat.stdout  stat.txt
04-false-sharing/bench/sharing/: c2c.data  c2c.stdout  c2c.txt  dry.stdout  mem.data  mem.stdout  mem.txt  stat.data  stat.stdout  stat.txt
04-false-sharing/src/: sum_scalar.c  sum_scalar_solution.c
